[package]
name = "treetrace"
version = "0.1.0"
edition = "2024"
authors = ["Marcelo Lima <marcelowind@gmail.com>"]
readme = "README.md"
repository = "https://github.com/m-lima/treetrace"
keywords = ["logging", "tracing", "log", "subscriber"]
categories = ["development-tools::debugging", "asynchronous"]
description = "A tracing layer that nests events in spans"
license = "MIT"

[features]
default = ["timestamp"]
timestamp = ["dep:chrono"]

[dependencies]
chrono = { version = "0.4.40", default-features = false, features = [
  "now",
], optional = true }
rand = { version = "0.9.0", default-features = false, features = [
  "os_rng",
  "small_rng",
] }
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
  "registry",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
